@@ -1986,6 +1986,7 @@ $&apids@%apids
 $&background@\fIused by \fR%background
 $&backquote@\fIused by \fR%backquote
 $&batchloop@%batch-loop
+$&build@\fIbuild info
 $&catch@\fIused by \fRcatch \fIand \fRsignals-case
 $&cd@\fIused by \fRcd
 $&close@%close
