@@ -1,0 +1,4 @@
+/* buildinfo.cxx -- builder information */
+#include "xs.hxx"
+#include "buildinfo.hxx"
+const char * const build = BUILDINFO;
